# concurrent-video-analytic-pipeline-optimization-sample-l

./: LICENSE  README.md  build_and_install.sh  msdk_build.sh  msdk_pre_install.py  msdk_pre_install_internal.py  onevpl_pre_install.py  svet_env_setup.sh
doc/: CONTRIBUTING.md  FAQ.md
par_file/: n16_1080p_1080p_dp_noinfer.par  n16_1080p_face_detect_30fps.par  n16_1080p_noinfer_30fps.par  n16_1080p_rtsp_simu.par  n4_vehical_detect_1080p.par  n64_d1_1080p_dp.par  rtsp_dump_only.par
par_file/basic/: n16_1080p_30fps_videowall.par  n16_1080p_videowall.par  n16_1080p_videowall_encoding.par  n16_1080p_videowall_ff_encoding.par  n1_1080p.par  n1_jpeg_enc_test.par  n1nodsp.par  n4_1080p_1080p_dp.par  n4_4k_videowall.par  n4_jpeg_enc_test.par  n64_d1_1080p_videowall.par
par_file/inference/: n16_1080p_face_detect_30fps.par  n16_1080p_face_detection_fakesink.par  n16_1080p_h265_fd.par  n16_1080p_h265_fd_withenc.par  n16_1080p_person_detect_30fps.par  n16_face_detection_1080p.par  n16_face_detection_1080p_withenc.par  n16_face_detection_1080p_x11.par  n16_face_detection_4k.par  n16_multi_object_tracker.par  n1_multi_object_tracker.par  n2_yolo_h264.par  n2_yolo_h265.par  n4_1080p_fakesink_hp_rb.par  n4_face_detection_rgbp.par  n4_human_pose_1080p.par  n4_multi_object_tracker.par  n4_vehicel_detect_1080p.par  n4_vehicel_detect_1080p_withenc.par  n4_vehicel_detect_hddl_1080p.par  n4_vehicel_detect_infer_options.par
par_file/misc/: mcu1_1080p_4to4.par  mcu2_1080p_4to4.par  n16_1080p_decode_fakesink.par  n16_1080p_decode_vpp_comp_no_display.par  n32_1080p_decode_dump_to_null.par  n32_1080p_decode_fakesink.par  n4_vehicel_detect_fakesink.par  n64_1080p_decode_fakesink.par
par_file/rtsp/: n16_face_detection_1080p.par  n16_face_detection_rtsp_save.par  n16_h265_1080p_rtsp_simu.par  n4_rtsp_human_post_1080p.par  n4_rtsp_vehicel_detect.par
par_file/vcd/: n1_v4l2_drm_display_main_4k60.par  n1_v4l2_drm_display_main_4k60_audio.par  n1_v4l2_drm_display_main_4k60_avmux.par  n1_v4l2_drm_display_main_upto_4k30.par  n1_v4l2_drm_display_main_upto_4k30_avmux.par  n1_v4l2_drm_display_secondary_4k30_audio.par  n1_v4l2_drm_display_secondary_4k30_avmux.par  n1_v4l2_drm_display_secondary_upto_4k30.par  n2_v4l2_drm_display_4k30_4k30.par  n2_v4l2_drm_display_4k60_4k30.par  n2_v4l2_drm_display_4k60_4k30_audio.par  n4_v4l2_drm_display_4k60_4k30.par  n4_v4l2_drm_display_main_4k30_audio.par  n4_v4l2_drm_display_main_4k60_4k30_audio.par  n4_v4l2_drm_display_main_4k60_audio.par  n4_v4l2_drm_display_main_4k60_audio_4k30.par  n4_v4l2_drm_display_secondary_4k30_audio.par
patches/: 0001-MSDK-Enable-AVC-decode-SFC-RGB4.patch  0002-sample_common-Add-support-to-multiple-displays.patch
sanity_test/: n1_yolo_h264.par  n2fd.par  n2fdh265.par  n2fdrb.par  n2hp.par  n2vd.par
script/: CMakeLists_woOpenVINO.txt  download_and_copy_models.sh  download_models.sh  install_binary.sh  pack_binary.sh  run_face_detection_test.sh  upgrade_linux_kernel.sh
video_e2e_sample/: CMakeLists.txt
video_e2e_sample/human_pose/: human_pose.cpp  human_pose_estimator.cpp  peak.cpp  render_human_pose.cpp
video_e2e_sample/include/: alsa_audiostream_reader.h  alsa_vcd_device.h  av_mp4_muxer.h  e2e_sample_infer_def.h  file_and_rtsp_bitstream_reader.h  global_value.h  human_pose.hpp  human_pose_estimator.hpp  kuhn_munkres.hpp  lame_mp3_encoder.h  logging.hpp  media_inference_manager.h  mot_core.hpp  mot_descriptor.hpp  mot_distance.hpp  mot_object_detector.hpp  mot_tracker.hpp  mot_utils.hpp  multi_object_tracker.hpp  network_factory.hpp  object_detect.hpp  peak.hpp  pipeline_transcode.h  render_human_pose.hpp  sample_multi_transcode.h  sample_queue.h  v4l2_bitstream_reader.hpp  v4l2_vcd_device.hpp  v4l2_vcd_pipeline.hpp  vehicle_detect.hpp  vpp_ext_buffers_storage.h
video_e2e_sample/multi_object_tracker/: kuhn_munkres.cpp  mot_distance.cpp  mot_ie_descriptor.cpp  mot_object_detector.cpp  mot_tracker.cpp  mot_utils.cpp
video_e2e_sample/sample_common/: CMakeLists.txt
video_e2e_sample/sample_common/include/: hw_device.h  vaapi_device.h  vaapi_utils_drm.h
video_e2e_sample/sample_common/src/: vaapi_device.cpp  vaapi_utils_drm.cpp  vpl_implementation_loader.cpp
video_e2e_sample/src/: alsa_audiostream_reader.cpp  alsa_vcd_device.cpp  av_mp4_muxer.cpp  file_and_rtsp_bitstream_reader.cpp  lame_mp3_encoder.cpp  media_inference_manager.cpp  multi_object_tracker.cpp  network_factory.cpp  object_detect.cpp  pipeline_transcode.cpp  sample_multi_transcode.cpp  transcode_utils.cpp  v4l2_bitstream_reader.cpp  v4l2_vcd_device.cpp  v4l2_vcd_pipeline.cpp  vpp_ext_buffers_storage.cpp
video_e2e_sample/vehicle_detect/: vehicle_detect.cpp
